@@ -53,4 +53,32 @@
 4: [5, 5]
 * 1
 1: [1, 1]
+[[]~, []~, 0, 1]
+[[1]~, [1]~, 2, 4]
+[[0]~, [0]~, 1, 1]
+[[3]~, [3]~, 3, 4]
+[13, [0, 19]~, 13, 20]
+[[0, 19]~, [1, 0]~, 51, 20]
+[[10, 1], [1, 10]~, 99, 2]
+  ***   at top-level: znchar(0)
+  ***                 ^---------
+  *** znchar: incorrect type in znchar (t_INT).
+  ***   at top-level: znchar(2)
+  ***                 ^---------
+  *** znchar: incorrect type in znchar (t_INT).
+  ***   at top-level: znchar(3)
+  ***                 ^---------
+  *** znchar: incorrect type in znchar (t_INT).
+  ***   at top-level: znchar([]~)
+  ***                 ^-----------
+  *** znchar: incorrect type in znchar (t_COL).
+  ***   at top-level: znchar([1,2,3])
+  ***                 ^---------------
+  *** znchar: incorrect type in znchar (t_VEC).
+  ***   at top-level: znchar([1,2])
+  ***                 ^-------------
+  *** znchar: incorrect type in znchar (t_VEC).
+  ***   at top-level: znchar([idealstar(,1
+  ***                 ^--------------------
+  *** znchar: incorrect type in znchar (t_VEC).
 Total time spent: 2
